исправил все недочеты